PVC.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: prod-data-pod 
spec: 
  containers: 
    - name: data-writer
      image: alpine:latest
      command: ["/bin/sh", "-c", "echo 'Hello from prod data!' > data/status.txt; sleep 3600"]
      volumeMounts: 
        - mountPath: "/data" 
          name: prod-storage-volume 
  volumes: 
    - name: prod-storage-volume 
      persistentVolumeClaim: 
        claimName: prod-local-pvc
