configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prod-config-pod 
  labels:
    app.kubernetes.io/name: prod-config
    tier: frontend
    environment: production
spec:
  containers:
    - name: config-reader
      image: alpine:latest
      command: ["/bin/sh", "-c", "echo 'UI Theme: $UI_THEME'; echo 'API URL: $API_URL'; echo 'DB Password: $DB_PASSWORD'; echo 'API Key: $API_KEY'; sleep 3600"]
