daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata: 
  name: fluent-bit-collector
  labels:
    k8s-app: fluent-bit-collector
spec:
  selector:
    matchLabels:
      k8s-app: fluent-bit-collector
  template:
    metadata:
      labels:
        k8s-app: fluent-bit-collector
    spec:
      containers:
      - name: fluent-bit
        image: fluent/fluent-bit:1.8
        resources:
          limits:
            memory: 100Mi
            cpu: 100m
          requests:
            memory: 50Mi
            cpu: 500m
