clusterIp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-svc
spec:
  selector:
    run: web1
  ports:
    - port: 80
      targetPort: 80

#kubectl apply -f clusterIp-svc.yaml
# curl
