headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-headless
spec:
  clusterIp: None
  selector:
    run: web1
  ports:
    - port: 80
      targetPort: 80

#kubectl apply -f headless-svc.yaml
