nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
spec:
  type: NodePort
  selector:
    run: web1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30007

# kubectl apply -f nodeport-svc.yaml
# curl <NodeIP>:30007
